--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@ $def with (paref, co, p1res, p2res, diff)
 <head>
 <link rel="stylesheet" type="text/css" href="../static/style.css">
 <script src="../static/Chart/Chart.js"></script>
-<title>Page</title>
+<title>Graphs</title>
 </head>
 <body>
 
@@ -12,10 +12,10 @@ $def with (paref, co, p1res, p2res, diff)
 
 <p>Photores Values</p>
 <div style="width:40%">
-			<div>
-				<canvas id="myChart" width="600" height="400"></canvas>
-			</div>
-		</div>
+	<div>
+		<canvas id="myChart" width="600" height="400"></canvas>
+	</div>
+</div>
 <script>
 
 setTimeout(function(){
