--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-$def with (paref, co, p1res, p2res, diff)
+$def with (paref, pos, co, p1res, p2res, diff)
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +8,7 @@ $def with (paref, co, p1res, p2res, diff)
 </head>
 <body>
 
-    Status: $co  -- ArduinoTEST --$p1res-- --$p2res-- --$diff--
+    Status: $co  -- ArduinoTEST --$p1res-- --$p2res-- --$diff-- --$pos--
 
 <p>Photores Values</p>
 <div style="width:40%">
