--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,14 @@
-$def with (paref, pos, co, p1res, p2res, diff)
+$def with (co)
 <!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="../static/style.css">
 <script src="../static/Chart/Chart.js"></script>
-<title>Graphs</title>
+<title>Title</title>
 </head>
 <body>
 
-    Status: $co  -- ArduinoTEST --$p1res-- --$p2res-- --$diff-- --$pos--
+    Status: $co
 
-<p>Photores Values</p>
-<div style="width:40%">
-	<div>
-		<canvas id="myChart" width="600" height="400"></canvas>
-	</div>
-</div>
-<script>
-
-setTimeout(function(){
-   window.location.reload(1);
-}, $paref);
-
-var data = {
-    labels: ["1h", "2h", "3h", "4h", "5h", "6h", "7h", "8h", "9h","10h", "12h", "13h"],
-    datasets: [
-        {
-            label: "PhotoRes1",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(25, 209, 25, 1)",
-            pointColor: "rgba(25, 209, 25, 1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: $p1res
-        },
-        {
-            label: "PhotoRes2",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(80, 198, 225, 1)",
-            pointColor: "rgba(80, 198, 225, 1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: $p2res
-        },
-       
-    ]
-};
-
-var ctx = document.getElementById("myChart").getContext("2d");
-var myNewChart = new Chart(ctx).Line(data, {scaleOverride: true, scaleSteps: 10 ,scaleStepWidth:100, scaleStartValue:500 });
-
-</script>
 </body>
 </html>
