--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-$def with (co)
+$def with (co, val)
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +8,7 @@ $def with (co)
 </head>
 <body>
 
-    Status: $co
+    Status: $co -- Int val = --
 
 </body>
 </html>
